Prevent tip checkbox hidden by website CSS

--- a/css/theme.css
+++ b/css/theme.css
@@ -96,7 +96,7 @@ a {
 }
 
 .twik-checkbox {
-  -webkit-appearance: checkbox;
+  -webkit-appearance: checkbox !important;
   width: auto !important;
   height: auto !important;
   vertical-align: middle;
